--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">MatrixApp</string>
+    <string name="no_internet">No internet connection\nPlease reconnect to proceed</string>
+    <string name="no_border_countries">This country must be very lonely…</string>
+    <string name="area_size">Area Size</string>
+    <string name="retry">Retry</string>
+    <string name="service_unavailable">Unable to connect to service</string>
+    <string name="sort_by_name">Sort by name</string>
+    <string name="sort_by_size">Sort by area size</string>
+
+
+
 </resources>
